<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.google.tobias.gottschalk.rabattrechner.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/btn_"
        android:layout_width="268dp"
        android:layout_height="495dp"
        android:layout_marginEnd="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/txt_grundwert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_gesamt"
            android:inputType="number" />

        <EditText
            android:id="@+id/txt_prozet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_prozent"
            android:inputType="number|numberSigned|numberDecimal"
            android:singleLine="true" />

        <EditText
            android:id="@+id/txt_ergebnis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_ergebnis"
            android:inputType="number" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </RadioGroup>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@android:string/VideoView_error_button" />

        <Button
            android:id="@+id/btn_clear"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/btn_clear" />

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/btn_beenden"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
